<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_foto_makanan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/menu_image"
        tools:src="@tools:sample/avatars"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nama_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/nama_menu_makanan" />

        <TextView
            android:id="@+id/tv_harga_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="16sp"
            android:maxLines="2"
            tools:text="@string/harga_makanan" />

        <TextView
            android:id="@+id/tv_satuan_makanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="16sp"
            android:maxLines="5"
            tools:text="@string/satuan_makanan" />
    </LinearLayout>
</LinearLayout>