<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_foto_makanan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/menu_image"/>

        <TextView
            android:id="@+id/tv_nama_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_menu_makanan"
            android:layout_marginTop="8dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/iv_foto_makanan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_harga_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_makanan"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="monospace"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_makanan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_satuan_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satuan_makanan"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_harga_makanan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_satuan_makanan">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_total"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total jumlah"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_plus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_minus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_total" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_total"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>